--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@vue/composition-api": "^0.6.4",
+    "@vueuse/firebase": "^2.0.34",
+    "apexcharts": "^3.19.2",
     "core-js": "^3.6.5",
+    "cuid": "^2.1.8",
+    "d3": "^5.16.0",
+    "firebase": "^7.15.3",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.3",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@types/d3": "^5.7.2",
     "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.157",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "^4.4.0",
@@ -76,5 +85,10 @@
   ],
   "jest": {
     "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "semi": false
   }
 }
