--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "firebase deploy"
   },
   "dependencies": {
     "@vue/composition-api": "^0.6.4",
