Reverse lists and roll log dates

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.6.5",
     "cuid": "^2.1.8",
     "d3": "^5.16.0",
+    "date-fns": "^2.14.0",
     "firebase": "^7.15.3",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.3",
