--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue/composition-api": "^0.6.4",
     "@vueuse/firebase": "^2.0.34",
     "apexcharts": "^3.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "cuid": "^2.1.8",
     "d3": "^5.16.0",
@@ -20,6 +21,7 @@
     "firebase": "^7.15.3",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.5.3",
+    "vue-chartjs": "^3.5.0",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.2.0",
