--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
