--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/composition-api": "^0.6.4",
     "@vueuse/firebase": "^2.0.34",
     "chart.js": "^2.9.3",
+    "color": "^3.1.2",
     "core-js": "^3.6.5",
     "cuid": "^2.1.8",
     "d3": "^5.16.0",
