--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vueuse/firebase": "^2.0.34",
     "chart.js": "^2.9.3",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "chartjs-plugin-hierarchical": "^2.0.0",
     "color": "^3.1.2",
     "core-js": "^3.6.5",
     "cuid": "^2.1.8",
