--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
+    "vuex-module-decorators": "^0.17.0",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
